--- a/css/style.css
+++ b/css/style.css
@@ -218,8 +218,9 @@ section{
     min-height: 100vh;
     display: flex;
     align-items: center;
-    background:url(/3.jpg) no-repeat;
-    background-size: cover;
+    background:url(../images/banner.png) no-repeat;
+    margin-top: 40px;
+    background-size: contain;
     background-position: center;
 }
 
@@ -647,6 +648,8 @@ section{
     .home .content p{
         font-size: 1.5rem;
     }
+   
+    
 
 }
 
@@ -655,5 +658,8 @@ section{
     html{
         font-size: 50%;
     }
-
+    img {
+        width: 100%;
+        height: 100%;
+    }
 }
